testsuite/tests/indexed-types/should_fail/Overlap4.hs
{-# LANGUAGE TypeFamilies #-}

module Overlap4 where

type family F a b where
  F Int Int = Bool
  F Bool = Maybe

