testsuite/tests/indexed-types/should_fail/Overlap4.stderr

Overlap4.hs:7:3: error:
    • Number of parameters must match family declaration; expected 2
    • In the type family declaration for ‘F’
